--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: What to Bring to COllege - Blog
+name: What to Bring to College - Blog
 
 # Short bio or description (displayed in the header)
 description: News and tips to help you succeed in college
