--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ description: News and tips to help you succeed in college
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+
 #
 # Flags below are optional
 #
@@ -18,15 +22,15 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: contact@whattobringtocollege.com
+  facebook: https://www.facebook.com/whattobringtocollege
   flickr:
-  github: barryclark/jekyll-now
+  github:
   instagram:
   linkedin:
-  pinterest:
+  pinterest: https://www.pinterest.com/whattobringtocollege/
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: bringtocollege
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +45,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://blog.whattobringtocollege.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
