--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: What to Bring to College - Blog
 description: News and tips to help you succeed in college
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/coryperson/blog.whattobringtocollege.com/master/images/what-to-bring-to-college-blog-logo.jpg
 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
